fix: fixed issue where execution inputs were not showing

--- a/src/modules/70-pipeline/pages/execution/ExecutionLandingPage/ExecutionLandingPage.module.scss
+++ b/src/modules/70-pipeline/pages/execution/ExecutionLandingPage/ExecutionLandingPage.module.scss
@@ -120,5 +120,6 @@
     height: calc(100vh - #{$header-height + $details-height + $tabs-height});
     display: flex;
     flex-direction: column;
+    overflow: scroll;
   }
 }
